[package]
name = "kidnapped_robot"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",               # Core 2D profile: rendering, Camera2d, gizmos, transforms, etc.
    "bevy_dev_tools",   # FpsOverlayPlugin lives here
    "bevy_log",         # info! macro
] }
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier.git", rev = "394e56d", features = ["debug-render-2d"] }
rand = "0.8.4"
statrs = "0.18.0"

[features]
dev = ["bevy/dynamic_linking"]

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom_02 = { version = "^0.2", features = ["js"], package = "getrandom" }
getrandom_03 = { version = "^0.3", features = ["wasm_js"], package = "getrandom" }

[package.metadata.bevy_cli.web]
features = ["bevy/webgpu"]
